<package format="2">
	<name>omnibase_description</name>
	<version>1.0.1</version>
	<description>
		This package constains the model files of the omnibase(omniwheeled robot)
	</description>

	<license>BSD</license>

	<url type="website">https://erc-bpgc.github.io/omnibase/</url>
	<maintainer email="hardesh1deshpande@gmail.com">Harshal Deshpande</maintainer>
	<maintainer email="mihirk284@gmail.com">Mihir Kulkarni</maintainer>

	<author email="hardesh1deshpande@gmail.com">Harshal Deshpande</author>
	<author email="mihirk284@gmail.com">Mihir Kulkarni</author>


	<buildtool_depend>catkin</buildtool_depend>
	<!-- <buildtool_depend>catkin_simple</buildtool_depend> -->

	<depend>geometry_msgs</depend>
	<depend>rospy</depend>
	<depend>roscpp</depend>
	<depend>std_msgs</depend>

	<depend>joint_state_controller</depend>
  	<depend>joint_trajectory_controller</depend>
  	<depend>effort_controllers</depend>
  	<depend>position_controllers</depend>
  	<depend>velocity_controllers</depend>

</package>