<?xml version="1.0"?>
<package format="2">
  <name>omnibase_gazebo</name>
  <version>1.0.1</version>
  <description>The omnibase_gazebo package</description>

  <maintainer email="hardesh1deshpande@gmail.com">Harshal Heshpande</maintainer>
  <maintainer email="mihirk284@gmail.com">Mihir Kulkarni</maintainer>

  <license>BSD</license>

  <url type="website">https://erc-bpgc.github.io/omnibase/</url>
  <author email="hardesh1deshpande@gmail.com">Harshal Deshpande</author>
  <author email="mihirk284@gmail.com">Mihir Kulkarni</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <buildtool_depend>catkin_simple</buildtool_depend> -->

  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>joint_state_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>effort_controllers</depend>
  <depend>position_controllers</depend>
  <depend>velocity_controllers</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
