<package format="2">
  <name>omnibase_simulator</name>
  <version>0.0.1</version>
  <description>omnibase package has a 4 omni wheeled robot</description>

  <maintainer email="hardesh1deshpande@gmail.com">Harshal Deshpande</maintainer>

  <author>Harshal Deshpande</author>

  <license>BSD</license>

  <!-- <url type="website">https://github.com/ethz-asl/rotors_simulator</url> -->

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>omnibus_control</exec_depend>
  <exec_depend>omnibus_description</exec_depend>
  <exec_depend>omnibase_gazebo</exec_depend>
  
</package>
